--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ VITE_WEBHOOK_URL=http://localhost:5173/api/webhook
 # These are kept secret and only used in server-side API routes/functions
 
 # EVOLUTION API CONFIGURATION (All server-side for security)
-EVOLUTION_API_URL=https://your-evolution-api.com
+VITE_EVOLUTION_API_URL=https://your-evolution-api.com
 EVOLUTION_API_KEY=your-evolution-api-key
 
 # OPENAI CONFIGURATION (Secret key - server-side only)
