🔧 Node.js 20+ Update: Fix CI/CD baileys dependency issue
✨ Changes:
- Updated GitHub Actions CI/CD workflow from Node.js 18 to Node.js 20
- Updated .github/workflows/ci-cd.yml to use NODE_VERSION: '20'
- Updated vercel.json runtime from nodejs18.x to nodejs20.x (already correct)
- Added engines field to package.json requiring Node.js >=20.0.0

📋 Why This Fix:
- @whiskeysockets/baileys package requires Node.js 20+ to run reliably
- CI/CD was failing with error: 'This package requires Node.js 20+ to run reliably'
- GitHub Actions was using Node.js 18.20.8, causing build failures

📁 Files Updated:
- .github/workflows/ci-cd.yml (NODE_VERSION: '18' → '20')
- package.json (added engines field)
- DEPLOYMENT_CHECKLIST.md (Node.js 18+ → 20+)
- WACANDA_DEVELOPMENT_PLAN.md (Node.js 18+ → 20+)
- .cursor/references/DEVELOPMENT_PLAN.md (Node.js 18+ → 20+)

🚀 Impact:
- CI/CD pipeline will now use Node.js 20
- Vercel deployments will use nodejs20.x runtime
- Local development should use Node.js 20+
- Dependency compatibility issues resolved

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,10 @@ on:
     branches:
       - main
 
+env:
+  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+
 jobs:
   # =====================================================
   # QUALITY CHECKS
@@ -23,7 +27,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm'
 
       - name: Install dependencies
@@ -55,7 +59,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm'
 
       - name: Install dependencies
@@ -133,7 +137,7 @@ jobs:
         if: steps.check-secrets.outputs.has_secrets == 'true'
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm'
 
       - name: Install dependencies
