--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "framework": "vite",
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "installCommand": "npm install",
+  "installCommand": "npm ci",
   "devCommand": "npm run dev",
   "env": {
     "SUPABASE_URL": "@supabase_url",
@@ -26,18 +26,18 @@
     }
   },
   "functions": {
-    "app/api/**/*.ts": {
-      "runtime": "nodejs18.x",
+    "src/main.tsx": {
+      "maxDuration": 30
+    },
+    "supabase/functions/**/*.ts": {
+      "runtime": "nodejs20.x",
+      "memory": 512,
       "maxDuration": 30
     }
   },
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
-    },
-    {
-      "source": "/((?!api/).*)",
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ],
