fix: add environment reference for Vercel deployment secrets
- Add 'environment: WACANDA_PROD' to production-deployment job
- This allows GitHub Actions to access secrets stored under WACANDA_PROD environment
- Fixes deployment issue where secrets were not found by workflow

Now GitHub Actions can access:
- VERCEL_TOKEN
- VERCEL_ORG_ID
- VERCEL_PROJECT_ID

from the WACANDA_PROD environment.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -112,6 +112,7 @@ jobs:
   production-deployment:
     name: Production Deployment
     runs-on: ubuntu-latest
+    environment: WACANDA_PROD
     needs: quality-checks
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     outputs:
